--- a/frontend/src/components/home/_home.scss
+++ b/frontend/src/components/home/_home.scss
@@ -10,65 +10,102 @@
     left: 0;
     right: 0;
     border-radius: 0 0 50px 50px;
-    background: $color-smoke;
 }
 
-.hero-img{
-    position: absolute;
-    width: 40%;
-    min-width: 30rem;
-    bottom: 0;
-    right: 15%;
-    transform: rotate(-15deg);
-    transform-origin: center center; 
-    @media (max-width: 850px) {
-        right: -5%;
-        transform: scale(80%) rotate(-15deg);
-        bottom: 10%;
-    }
-}
-
-.hero-circle{
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(-5%, -60%);
-    z-index: -1;
-    border-radius: 50%;
-    height: 50rem;
-    width: 50rem;
-    background: white;
-}
-
-.hero-about{
+.hero-about {
     position: sticky;
     display: flex;
-    padding: 5rem 0 5rem 1rem;
+    align-items: center;
+    padding: 4rem 239px 0rem 0rem;
     max-width: 1080px;
+    margin-left: 300px;
     width: 100%;
-    margin: auto;
-    h3{
+
+    h3 {
         padding: 0rem 0rem;
         font-size: 3rem;
         margin: 1rem 0;
     }
-    p{
+
+    p {
         font-size: 1rem;
     }
-    button{
+
+    button {
         margin-top: 1rem;
         width: 100%;
         background: $color-dark;
         border: 2px solid $color-dark;
         font-size: 1rem;
     }
+
     @media (max-width: 800px) {
         padding-top: 2rem;
-        h3{
+
+        h3 {
             font-size: 2.5rem;
         }
     }
 }
 
+.box-heading {
+    h3 {
+        color: #fff;
+        margin: 0;
+        font: 500 20px/24px "Ubuntu",sans-serif;
+        text-transform: uppercase;
+    }
+
+    padding: 18px 4px 18px 27px;
+    background: #98d648;
+    border-radius: 3px 3px 0 0;
+    margin-bottom: 0;
+}
+
+.row-inner {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.col-lg-3, .col-md-3, .col-sm-3, .col-xs-12 {
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding: 15px;
+}
+.col-lg-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+    margin-left: 200px;
+    padding: 15px;
+}
+.sf-menu {
+    list-style: none;
+    padding-left: 0;
+    border: 2px solid #98d648;
+
+    li {
+        width: 100%;
+        font-size: 16px;
+        line-height: 35px;
+        font-weight: 300;
+        padding: 11px 14px 11px 1px;
+        text-align: center;
+
+        a {
+            color: #333;
+            padding: 12px 25px 13px;
+            text-decoration: none;
+
+            &:hover {
+                color: #333;
+                text-shadow: 1px 0 0 #333;
+            }
+        }
+
+        & + li {
+            border-top: 1px solid #eee;
+            margin-top: 0;
+        }
+    }
+}
 
