--- a/frontend/src/components/layout/_header.scss
+++ b/frontend/src/components/layout/_header.scss
@@ -1,19 +1,24 @@
-.header-container{
+.header-container {
+    font-family: 300 14px/24px "Ubuntu",sans-serif;
     width: 100%;
     margin: auto;
     max-width: 1080px;
     margin: auto;
     padding: 1rem;
+    font-palette: dark;
     flex: 1;
     @include flex(space-between, center, row);
-    ul{
+
+    ul {
         @include flex(space-between, center, row);
         gap: 1.5rem;
+
         @media (max-width: 850px) {
             display: none;
         }
     }
-    a h1{
+
+    a h1 {
         margin-bottom: 0;
         font-size: 1.2rem;
     }
@@ -56,29 +61,32 @@
     }
 }
 
-.header-second{
+.header-second {
     width: 100%;
+    height: 50px;
     margin: auto;
     @include flex(center, center, row);
-    background: $color-smoke;
-    border: 1px solid $color-lightgrey;
+    background: #98d648;
+
     @media (max-width: 850px) {
         display: none;
     }
 }
 
-.header-second-msg{
+.header-second-msg {
     @include flex(space-between, center, row);
     max-width: 1080px;
     width: 100%;
     padding: 0.25rem 1rem;
-    p{
+
+    p {
         font-weight: bold;
-        color: #666666;
+        color: white;
         font-size: 0.7rem;
     }
-    p span{
-        color: $color-blue;
+
+    p span {
+        color: black;
     }
 }
 
