--- a/frontend/src/components/product/_filter.scss
+++ b/frontend/src/components/product/_filter.scss
@@ -3,6 +3,7 @@
     width: 100%;
     gap: 0.5rem;
     margin-bottom: 1rem;
+    background: $color-lightgrey;
     select, input{
         margin-bottom: 0rem;
         height: 100%;
@@ -35,6 +36,7 @@
 .filter-option{
     width: 100%;
     display: flex;
+    background: $color-lightgrey;
 }
 
 .filter-spec{
